[project]
name = "deliver-media-content"
version = "0.1.0"
description = "A backend FastAPI service with Elasticsearch search capabilities."
authors = [{ name = "Ankita Dev", email = "ankitae.dev@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "elasticsearch>=8.0.0,<9.0.0",
    "python-dotenv",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["backend"]
addopts = "--strict-markers"
python_files = "test_*.py"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"